// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixtures should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa laZDmH"
  >
    <div
      class="sc-htpNat sc-ifAKCX kRuyQz"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixtures should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa Ssmqo"
  >
    <div
      class="sc-htpNat sc-ifAKCX kRuyQz"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
